--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-4.83MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6003, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-188.0KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.69MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇨🇳 中国-2.17MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8060, type: ss, cipher: aes-128-gcm, password: 66f661b6-d148-493a-ae9a-c1b65ff2e669}
-  - {name: 🇸🇬 新加坡-450.5KB/s(Youtube:不良林), server: 194.124.35.42, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-346.2KB/s(Youtube:不良林), server: 194.124.35.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: c86s2.jamjams3.net, port: 31567, type: ss, cipher: aes-256-gcm, password: VFZncMwjr6VGtEyk}
-  - {name: 🇺🇸 美国-4.36MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇯🇵 日本-1.00MB/s(Youtube:不良林), server: 81.90.190.218, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-403.8KB/s(Youtube:不良林), server: 194.124.35.42, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-2.80MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-7.04MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-598.9KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-847.1KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-522.4KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇸🇬 新加坡-591.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.83MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-4.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-450.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-346.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
