--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.00MB/s(Youtube:不良林), server: 81.90.190.218, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-403.8KB/s(Youtube:不良林), server: 194.124.35.42, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-2.80MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-7.04MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-598.9KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-847.1KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-522.4KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇸🇬 新加坡-591.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.97MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.06MB/s(Youtube:不良林), server: 81.90.190.218, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-8.77MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇺🇸 美国-5.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-261.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.60MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇯🇵 日本-939.4KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.04MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-598.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-522.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-591.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
