--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-939.4KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-261.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.44MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.28MB/s(Youtube:不良林), server: c86s3.jamjams3.net, port: 31567, type: vmess, uuid: 7e98d7df-0fc1-45f3-8a0c-f840218b4c22, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-689.6KB/s(Youtube:不良林), server: 81.90.190.218, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 香港-14.65MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20723, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-23.49MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20722, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-170.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.65MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-1.00MB/s(Youtube:不良林), server: 81.90.190.218, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-922.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-360.9KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-783.1KB/s(Youtube:不良林), server: 625hk01.ok365.cyou, port: 443, type: trojan, password: 8ca09dac-c2d3-4aeb-87e5-26b64ebcf5cf, sni: 625hk01.ok365.cyou, skip-cert-verify: true}
   - {name: 🇨🇳 中国-373.7KB/s(Youtube:不良林), server: 625hk05.ok365.cyou, port: 443, type: trojan, password: 8ca09dac-c2d3-4aeb-87e5-26b64ebcf5cf, sni: 625hk05.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.51MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.81MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-14.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-939.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
-      - 🇯🇵 日本-689.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-23.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-170.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-373.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
